--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -44,7 +44,7 @@ newArchEnabled=false
 hermesEnabled=true
 
 # Version of the THEOplayer SDK, if not specified, the latest available version is set.
-THEOplayer_sdk=[5.8.0,)
+#THEOplayer_sdk=[5.0.1,)
 
 # Version of the THEOplayer mediasession connector, if not specified, the latest available version is set.
 #THEOplayer_mediasession=5.0.0
@@ -55,17 +55,17 @@ THEOplayer_sdk=[5.8.0,)
 #THEOplayer_targetSdkVersion = 31
 
 # Toggle player event logging using tag 'VideoPlayer' (default: false)
-THEOplayer_logPlayerEvents = true
+#THEOplayer_logPlayerEvents = true
 
 # Toggle playerView event logging using tag 'ReactTHEOplayerView' (default: false)
-THEOplayer_logViewEvents = true
+#THEOplayer_logViewEvents = true
 
 # Toggle media session event logging (default: false)
 THEOplayer_logMediaSessionEvents = true
 
 # Enable THEOplayer Extensions (default: disabled)
-THEOplayer_extensionGoogleIMA = false
-THEOplayer_extensionGoogleDAI = false
+THEOplayer_extensionGoogleIMA = true
+THEOplayer_extensionGoogleDAI = true
 THEOplayer_extensionCast = true
 THEOplayer_extensionMediaSession = true
 
